--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "nodemailer": "^6.6.3",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "i18n-iso-countries": "^7.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
